--- a/www/src/scss/main.scss
+++ b/www/src/scss/main.scss
@@ -12,14 +12,48 @@ body {
 }
 
 * {
+	/* This is in order to avoid the annoying color around elements in safari */
 	-webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
-
+.search_bar {
+	width: 61%;
+    margin: 20px auto 0px auto;
+    display: block;
+	span {
+		text-align: center;
+		width: 100%;
+		display: block;
+	}
+	input {
+	    border-radius: 20px;
+	    border: 0px;
+	    height: 30px;
+	    margin-top: 10px;
+	    width: 100%;
+	}
+}
+.content {
+-webkit-overflow-scrolling: touch;
+	position: absolute;
+	width: 100%;
+	.dummy {
+	height: 2000px;
+	}
+	height: 90%;
+	section {
+		header {
+			border-bottom: 1px solid rgba(51, 51, 51, 0.49);
+			width: 90%;
+			margin: 21px auto 10px auto;
+			height: 24px;
+		}
+	}
+}
 footer {
 	height: 10%;
 	display: block;
-	position: absolute;
+	position: fixed;
 	width: 100%;
 	bottom: 0px;
 	background-color: rgb(151, 215, 255);
@@ -33,6 +67,7 @@ footer {
 		li {
 			width: 33%;
 			float: left;
+			font-size: 0.9em;
 			text-align: center;
 			display: flex;
 			flex-direction: column;
