--- a/www/src/scss/main.scss
+++ b/www/src/scss/main.scss
@@ -34,19 +34,33 @@ body {
 	}
 }
 .content {
--webkit-overflow-scrolling: touch;
-	position: absolute;
+	overflow: scroll;
 	width: 100%;
-	.dummy {
-	height: 2000px;
-	}
+	height: 300px;
 	height: 90%;
+	position: absolute;
 	section {
 		header {
 			border-bottom: 1px solid rgba(51, 51, 51, 0.49);
 			width: 90%;
 			margin: 21px auto 10px auto;
 			height: 24px;
+		}
+		ul {
+			list-style: none;
+			padding: 0px;
+			li {
+				width: 29%;
+				margin: 10px 2% 10px 2%;
+				float: left;
+				img {
+					width: 100%;
+				}
+				span {
+				    text-align: center;
+  					display: block;
+				}
+			}
 		}
 	}
 }
