--- a/www/src/scss/_base.scss
+++ b/www/src/scss/_base.scss
@@ -7,6 +7,7 @@ $light_blue: #4285F4;
 $light_bg:  #F1F1F1;
 $border_color: #CCC;
 $header_gray: #E4E4E4;
+$orange: #D65B28;
 /* Utility classes 
 */
 .clear {
