--- a/www/src/scss/main.scss
+++ b/www/src/scss/main.scss
@@ -24,6 +24,22 @@ body {
 	}
 }
 
+.your_location {
+	display: block;
+	cursor: pointer;
+	text-align: center;
+	i {
+		color: #6BAB0B;
+	}
+	sub {
+		display: block;
+	    color: #1981C1;
+	}
+}
+.support_component {
+	
+}
+
 .big_btn {
 	 display: flex;
     width: 80%;
@@ -159,5 +175,20 @@ body {
 				}
 			}
 		}
+	}
+}
+
+
+.events {
+	li {
+		width: 100% !important;
+		margin: 10px 2% 10px 2%;
+		float: left;
+		word-wrap: break-word;
+		text-transform: capitalize;
+		border: 1px solid #333;
+		padding: 5px;
+		position: relative;
+		left: -10px;
 	}
 }
