extract images from gov db

--- a/www/src/scss/_base.scss
+++ b/www/src/scss/_base.scss
@@ -8,6 +8,10 @@ $light_bg:  #F1F1F1;
 $border_color: #CCC;
 $header_gray: #E4E4E4;
 $orange: #D65B28;
+$green_icon: #6BAB0B;
+$blue_small: #1981C1;
+$footer_blue: #1BA7FF;
+$selected_yellow: #F6FF00;
 /* Utility classes 
 */
 .clear {
