--- a/www/src/scss/main.scss
+++ b/www/src/scss/main.scss
@@ -123,6 +123,11 @@ body {
 					float: left;
 					word-wrap: break-word;
 					text-transform: capitalize;
+					display: flex;
+					flex-direction: column;
+					align-items: center;
+					justify-content: center;
+					min-height: 150px;
 					img {
 						width: 100%;
 					}
