--- a/www/src/scss/main.scss
+++ b/www/src/scss/main.scss
@@ -17,6 +17,8 @@ body {
 }
 
 .warning {
+	max-width: 90%;
+    margin: 0px auto 0px auto;
 	text-align: center;
 	border-left: 10px solid $orange;
 	h1 {
@@ -113,7 +115,7 @@ body {
     				left: -10px;
 				}
 			}
-			ul {
+			ul:not(.regular_list) {
 				list-style: none;
 				padding: 0px;
 				margin-bottom: 100px;
@@ -136,6 +138,12 @@ body {
 	  					display: block;
 					}
 				}
+				li:nth-child(odd) {
+					clear: left;
+				}
+				li:nth-child(even) {
+					clear: right;
+				} 
 			}
 		}
 	}
@@ -161,6 +169,7 @@ body {
 			width: 100%;
 			height: 100%;
 			li {
+				clear: none !important;
 				width: 33%;
 				float: left;
 				font-size: 0.9em;
@@ -200,7 +209,7 @@ body {
 		border: 1px solid #333;
 		padding: 5px;
 		position: relative;
-		left: -10px;
+		left: -12px;
 		sub {
 			display: flex;
 		    flex-direction: row;
@@ -216,10 +225,27 @@ body {
 	.map {
 		height: 300px;
 	}
-	.map_container a {
-		text-align: center;
+	.map_container {
 		width: 100%;
-		display: block;
-		margin: 10px 0px 10px 0px;
+		a {
+			text-align: center;
+			width: 100%;
+			display: block;
+			margin: 10px 0px 10px 0px;
+		}
 	}
+}
+
+.regular_list {
+	li {
+		margin-bottom: 10px;
+	}
+}
+
+.last_element {
+	margin-bottom: 100px;
+}
+
+.top_m {
+	margin-top: 20px;
 }
