--- a/www/src/scss/main.scss
+++ b/www/src/scss/main.scss
@@ -297,6 +297,9 @@ label {
 }
 
 .alert_emergency {
+	a {
+		text-decoration: none;
+	}
 	.inner_c {
 		z-index: 99;
 		position: absolute;
@@ -329,4 +332,8 @@ label {
 
 .full {
 	min-height: 100%;
+}
+
+.last_element_i {
+	margin-bottom: 100px !important;
 }
